# rsignals

./: CHANGELOG.md  Cargo.toml  README.md  plan.md
src/: async.rs  error.rs  lib.rs  sync.rs
tests/: async_oneshot.rs  fuzz.rs  many_to_many.rs  oneshot.rs
